<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".Login">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:background="#B90C81"
        android:fontFamily="casual"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/topic_login"
        android:textColor="#fff"
        android:textSize="24dp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/email"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/email"
        android:hint="@string/hint_e_mail"
        android:inputType="text"
        android:maxLines="1" />

    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:drawableLeft="@drawable/password"
        android:hint="@string/hint_password"
        android:background="#ffffff"
        android:inputType="textPassword"
        android:maxLines="1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/login"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="#F7DE63"
            android:text="@string/btn_login" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#FF9800"
            android:text="@string/not_registered" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#F03030"
            android:paddingLeft="7dp"
            android:textStyle="bold"
            android:text="@string/register" />

    </LinearLayout>

</LinearLayout>


