<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/background"
    tools:context=".Feedback_write">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="380dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:background="#B90C81"
        android:fontFamily="casual"
        android:text="@string/topic_feedback_write"
        android:textAlignment="center"
        android:textColor="@color/cardview_light_background"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="328dp"
        android:text="@string/choose_subject"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <Button
        android:id="@+id/btn_send_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="243dp"
        android:layout_marginEnd="19dp"
        android:background="@color/colorPrimary"
        android:padding="5dp"
        android:text="@string/btn_send_feedback"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.931" />

    <RadioGroup
        android:id="@+id/subject_rad_group"
        android:layout_width="310dp"
        android:layout_height="28dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="71dp"
        app:layout_constraintBottom_toTopOf="@+id/comment_rad_group"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.69">

        <RadioButton
            android:id="@+id/feed_physics"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:text="@string/btnPhy" />

        <RadioButton
            android:id="@+id/feed_chemistry"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="-20dp"
            android:text="@string/btnChe" />

        <RadioButton
            android:id="@+id/feed_biology"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="-20dp"
            android:text="@string/Button" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/comment_rad_group"
        android:layout_width="164dp"
        android:layout_height="139dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="223dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.31">

        <RadioButton
            android:id="@+id/radio_excellent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedback1" />

        <RadioButton
            android:id="@+id/radio_verygood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedback2" />

        <RadioButton
            android:id="@+id/radio_good"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedback3" />

        <RadioButton
            android:id="@+id/radio_bad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedback4" />
    </RadioGroup>

    <EditText
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Write your comment here"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.616" />


</androidx.constraintlayout.widget.ConstraintLayout>