<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity"
    android:background="@drawable/maths"
    android:fadeScrollbars="true"
    android:hapticFeedbackEnabled="false"
    android:scrollbarFadeDuration="200"
    app:layout_constraintBaseline_creator="@android:integer/config_mediumAnimTime" >

    <Button
        android:id="@+id/btnBioUser"
        android:layout_width="413dp"
        android:layout_height="140dp"
        android:layout_marginTop="24dp"
        android:background="#FC429E45"
        android:text="@string/Button"
        android:textColor="#FFFFFF"
        android:textDirection="firstStrongRtl"
        android:textIsSelectable="false"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HomeHeaderUser" />

    <Button
        android:id="@+id/btnPhyUser"
        android:layout_width="413dp"
        android:layout_height="140dp"
        android:background="#FCB53A3A"
        android:text="@string/btnPhy"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBioUser" />

    <Button
        android:id="@+id/btnCheUser"
        android:layout_width="413dp"
        android:layout_height="140dp"
        android:background="#FC1C2E65"
        android:text="@string/btnChe"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPhyUser" />

    <TextView
        android:id="@+id/HomeHeaderUser"
        android:layout_width="225dp"
        android:layout_height="33dp"
        android:layout_marginTop="24dp"
        android:background="#FFFFFF"
        android:freezesText="false"
        android:text="@string/HomeHead"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textIsSelectable="true"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="AddMaterials"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCheUser"
        tools:ignore="OnClick" />


</androidx.constraintlayout.widget.ConstraintLayout>

